Adjust event opening and archival schedule
